--- a/live-backend-mp/src/main/resources/application-dev.properties
+++ b/live-backend-mp/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=111111
-spring.datasource.url=jdbc:mysql://localhost:3306/live?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/live?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.filters=stat
 spring.datasource.maxActive=50
